<resources>
	<string name="app_name">100+商城</string>
	<string name="hot_tab">100+V6</string>
	<string name="classify_tab">分类</string>
	<string name="activities_tab">活动</string>
	<string name="service_tab">服务</string>
	<string name="login_fail">登录失败</string>
	<string name="login_success">用户登录成功</string>
	<string name="msg_network_fail">服务连接失败，请重新登录！</string>
	<string name="product_shopping_cart">购物车</string>
	<string name="menu_orders">订单</string>
	<string name="menu_update">检查更新</string>
	<string name="menu_setting">设置</string>
	<string name="menu_switch_test">切换到测试(重启生效)</string>
	<string name="menu_switch_formal">切换到正式(重启生效)</string>
	<string name="switch_formal_test_hint">重启后生效</string>
	<string name="account_my_order_list">订单查询</string>
	<string name="menu_refresh">刷新</string>
	<string name="menu_url">输入网址</string>
	<string name="msg_service_fail">服务出现异常</string>
	<string name="network_cannot_access">网络无法访问</string>
	<string name="account_my_address">管理地址</string>
	<string name="account_favorite">我的收藏</string>
	<string name="account_service_station">服务网点</string>
	<string name="account_hint_text">请输入用户名</string>
	<string name="forget_password"><u>忘记密码</u></string>
	<string name="password">密码</string>
	<string name="password_hint_text">6~16位字符</string>
	<string name="account_login_primary_text">立即登录</string>
	<string name="account_login_second_text">享受更多贴心服务</string>
	<string name="welcome">欢迎来到商城！</string>
	<string name="login_notice">登录中，请稍候</string>
	<string name="login_retry">重试</string>
	<string name="please_login">购买前，请先登陆</string>
	<string name="login">登&#160;&#160;录</string>
	<string name="login_baidu"><u>百度账号登录</u></string>
	<string name="logout">退出登录</string>
	<string name="logout_message">确定要退出登录吗？</string>
	<string name="already_logout">已退出登录</string>
	<string name="micloud_reg_new"><u>注 册</u></string>
	<string name="repair_progress_date_format_default">yyyy-MM-dd HH:mm:ss</string>
	<string name="repair_progress_date_format">yyyy年MM月dd日</string>
	<string name="order_date_format" formatted="false">%-Y-%-m-%-d</string>
	<string name="login_error_empty_username">用户名不能为空</string>
	<string name="login_error_empty_pwd">密码不能为空</string>
	<string name="email_address">邮箱地址</string>
	<string name="input_email_prompt">请输入您的邮箱地址</string>
	<string name="next">下一步</string>
	<string name="prev">上一步</string>
	<string name="completed">完成</string>
	<string name="active_email_sent_1">我们已向您的邮箱</string>
	<string name="active_email_sent_2">发送了一封验证邮件</string>
	<string name="click_email">"点击邮件中的链接就可以激活您的账户"</string>
	<string name="active_sms_sent">注册短信已经发出</string>
	<string name="active_sms_status_wait">请稍等…</string>
	<string name="active_sms_status_fail">注册失败</string>
	<string name="active_sms_status_network">网络链接失败</string>
	<string name="active_sms_status_success">注册成功</string>
	<string name="error_empty_username">用户名不能为空</string>
	<string name="error_empty_pwd">密码不能为空</string>
	<string name="error_illegal_pwd">密码格式错误</string>
	<string name="password_error_inconsistent">密码不一致</string>
	<string name="input_password_prompt">请设置帐户密码</string>
	<string name="password_confirm_hint">再次确认密码</string>
	<string name="password_req_notice">您的密码长度必须为8－16字符，且必须包含一个数字、一个字母。可以使用特殊符号，字母区分大小写。</string>
	<string name="val_sms_alert">系统将发送一条验证短信，是否继续？</string>
	<string name="error_email">邮箱格式不正确</string>
	<string name="account">帐户</string>
	<string name="btn_negative">取消</string>
	<string name="btn_positive">确定</string>
	<string name="shop_are_closed">商城打烊了，过几小时再光临吧~</string>
	<string name="check_network">查看网络设置</string>
	<string name="login_again">重新登陆</string>
	<string name="try_again">重试一下</string>
	<string name="home_product_price_format">¥%1$s</string>
	<string name="home_footer_text">点击或向左滑动查看更多配件</string>
	<string name="immd_buy">下一步：选择颜色</string>
	<string name="favorite">收藏</string>
	<string name="subscriber">立即预约</string>
	<string name="book_or_buy">预约购买</string>
	<string name="pay_now">立即付款</string>
	<string name="go_ahead">立即前往</string>
	<string name="f_buy">加码购买</string>
	<string name="f_ma_buy_hint">使用加码购买100JIA产品</string>
	<string name="f_ma_buy_input_hint">请输入加码</string>
    <string name="f_ma_obtain_hint">&lt;b>如何获得加码？&lt;/b>&lt;br/>1.在100+V6手机里点击app图标  ,进入加友合伙人；&lt;br/>2.百度账号登录后，进入活动主页面；
		&lt;br/&gt;3.点击“邀请好朋友，分享好手机”，进入“我的加码”，摇一摇即可生成加码，普通用户默认最多可以同时生成3个加码；
		&lt;br/>4.勾选想要分享的加码，点击按钮进行分享。分享的加码如果在100+商城成功消费，系统将会自动将推荐奖励累计到当前账号上；
	</string>
	<string name="buy">立即购买</string>
	<string name="activity_enter_home">进入首页</string>
	<string name="submit">提交</string>
	<string name="shopping_button_checkout">去结算</string>
	<string name="shopping_cartlist_is_empty">购物车还是空的</string>
	<string name="shopping_cartlist_is_empty_subhead">现在就去选购吧</string>
	<string name="shopping_cartlist_is_empty_button_title">去逛逛</string>
	<string name="cart_item_center">售价&#160;:&#160;¥%1$s\n数量&#160;:&#160;%2$s\n小计&#160;:&#160;¥%3$s</string>
	<string name="total_shopping_cart_price_title">金额合计&#160;:&#160;</string>
	<string name="please_choose">请选择</string>
	<string name="please_choose_product">请先选择产品</string>
	<string name="adapt_phone">适用机型:</string>
	<string name="can_buy_max_count">数量</string>
	<string name="edit_cart_item_button_delete">删除</string>
	<string name="edit_cart_update">修改购物车</string>
	<string name="add_shopping_cart">加入购物车</string>
	<string name="replace">换成这个</string>
	<string name="checkout_form_hint">温馨提示</string>
	<string name="checkout_button_change_address">更换地址</string>
	<string name="checkout_button_add_address">添加地址</string>
	<string name="checkout_form_address_titie">收货信息</string>
	<string name="address_consignee">收货人姓名</string>
	<string name="hint_address_consignee">收货人真实姓名</string>
	<string name="label_address">收货地址</string>
	<string name="hint_address_location">路名或街道地址，门牌号</string>
	<string name="label_address_zipcode">邮政编码</string>
	<string name="hint_address_zipcode">为6位数字</string>
	<string name="label_address_tel">手机号码</string>
	<string name="hint_address_tel">联系人手机号，11位数字</string>
	<string name="label_phone">固定电话</string>
	<string name="hint_address_phone_area">区号</string>
	<string name="hint_address_phone">固定电话，不超过8位数</string>
	<string name="hint_address_phone_sub">分机</string>
	<string name="checkout_form_payment_title">支付方式</string>
	<string name="checkout_form_shipment_title">配送方式</string>
	<string name="checkout_form_deliver_time_title">送货时间</string>
	<string name="checkout_form_invoice_title">发票信息</string>
	<string name="checkout_form_invoice_edit_title">单位名称</string>
	<string name="checkout_form_address_empty">请选择收货地址</string>
	<string name="checkout_form_invoice_title_input_pleases">请填写单位发票信息</string>
	<string name="login_before">请先登录</string>
	<string name="login_before_op_shopping_cart">将商品加入购物车前，请先登录</string>
	<string name="checkout_next">下一步</string>
	<string name="checkout_no_invoice">不开发票</string>
	<string name="user_checkout">用户结算</string>
	<string name="order_submit_confirm">确认订单</string>
	<string name="checkout_set_form_data_exception">填写数据异常</string>
	<string name="address_title">%1$s %2$s</string>
	<string name="address_area">%1$s %2$s %3$s</string>
	<string name="address_location">%1$s (%2$s)</string>
	<string name="order_submit_button_submit">提交订单</string>
	<string name="order_submit_product_money">商品价格</string>
	<string name="order_list_rmb">¥</string>
	<string name="order_submit_shipment_title">运费:</string>
	<string name="order_submit_shipment">运送费</string>
	<string name="order_submit_coupon_discount">优惠券</string>
	<string name="coupon_code">优惠码:</string>
	<string name="copy_to_clipboard">复制优惠码</string>
	<string name="already_copy">优惠码已复制到剪贴板</string>
	<string name="denomination">面额:</string>
	<string name="coupon_status">状态:</string>
	<string name="coupon_use_limit">需满足金额:</string>
	<string name="coupon_time_limit">有效期至:</string>
	<string name="coupon_use">用途:</string>
	<string name="order_submit_activity_discount">活动</string>
	<string name="order_submit_total_title">应付总额</string>
	<string name="order_submit_amount_title">应付总额&#160;&#160;</string>
	<string name="order_submit_pay_title">应付总额&#160;:&#160;</string>
	<string name="coupon_expired_template_picker">过期时间 %1$s</string>
	<string name="coupon_time_format">yyyy/MM/dd HH:mm</string>
	<string name="coupon_use_title">使用优惠券</string>
	<string name="coupon_list_title">优惠券</string>
	<string name="coupon_picker_list_empty">亲，您当前没有可以使用的优惠券</string>
	<string name="coupon_list_empty">亲，您当前还没有优惠券哟</string>
	<string name="coupon_input_empty">优惠券不能为空</string>
	<string name="coupon_input_title">我有优惠券</string>
	<string name="coupon_input_prompt">请输入优惠券码</string>
	<string name="coupon_validate_prompt">请输入正确的优惠券码</string>
	<string name="coupon_btn">确认使用</string>
	<string name="title_login">登录商城</string>
	<string name="title_reg">注册帐户</string>
	<string name="title_activate">请激活您的帐户</string>
	<string name="micloud_account_label">帐户:%1$s</string>
	<string name="reg_by_email_failure">注册失败:%1$s</string>
	<string name="reg_failed">注册失败</string>
	<string name="login_failed">登录失败</string>
	<string name="error_no_sms_service">短信服务不可用</string>
	<string name="error_no_sim">无SIM卡，请插入SIM卡后再注册</string>
	<string name="error_network">当前网络不可用</string>
	<string name="error_dup_email">该邮箱已被注册</string>
	<string name="error_dup_phone">该电话号码已被注册</string>
	<string name="error_server">服务器出错</string>
	<string name="error_timeout">服务器连接超时</string>
	<string name="error_unknown">未知错误:%1$s</string>
	<string name="error_product_operator">选择版本没哟设置监听错误</string>
	<string name="account_name">帐户:%1$s</string>
	<string name="input_password_hint">请输入帐户密码</string>
	<string name="confirm">确定</string>
	<string name="total_price">订单总价&#160;:&#160;</string>
	<string name="product_total_price">商品总价&#160;:&#160;¥%1$s运费&#160;:&#160;¥%2$s</string>
	<string name="order_status">订单状态&#160;:&#160;</string>
	<string name="order_create_time">下单时间</string>
	<string name="order_NO">订单编号</string>
	<string name="cancel_order">取消订单</string>
	<string name="yes_string">是</string>
	<string name="no_string">否</string>
	<string name="confirm_cancel">您确定要取消这个订单吗？</string>
	<string name="address_management">地址管理</string>
	<string name="address_select_province">选择省</string>
	<string name="address_select_city">选择市</string>
	<string name="address_select_district">选择区</string>
	<string name="must_fill">必须填写</string>
	<string name="order_update_must_fill">请填写大于0的数量</string>
	<string name="please_address_select_province">请选择省</string>
	<string name="please_address_select_city">请选择市</string>
	<string name="please_address_select_district">请选择区</string>
	<string name="book_query">预约查询</string>
	<string name="my_coupons">我的优惠券</string>
	<string name="my_jiacoin">我的加币个数:</string>
	<string name="login_system_failed">系统帐号登录失败，请重试！</string>
	<string name="login_deactivate">帐号未激活，请检查您的注册邮箱！</string>
	<string name="autologin_title">使用系统帐号登录</string>
	<string name="autologin_summary">检测到您正在使用百度帐号"%1$s"，是否使用此帐号登录商城？</string>
	<string name="dialog_ask_ok">确认</string>
	<string name="dialog_ask_cancel">放弃</string>
	<string name="autologin_ask_ok">确认使用</string>
	<string name="autologin_ask_cancel">换个帐号</string>
	<string name="address_delete_title">删除地址</string>
	<string name="confirm_address_delete">确定要删除该收货地址吗？</string>
	<string name="forget_password_phone">手机号码找回</string>
	<string name="forget_password_email">电子邮箱找回</string>
	<string name="appointment_name">预约名称: %1$s</string>
	<string name="appointment_time">预约时间: %1$s</string>
	<string name="rb_end_time">结束时间：%1$s</string>
	<string name="appointment_product">预约商品: %1$s</string>
	<string name="appointment_rbstarttime">抢购开始时间: %1$s</string>
	<string name="appointment_rbendtime">抢购结束时间: %1$s</string>
	<string name="input_invoice_title_prompt">发票抬头</string>
	<string name="input_invoice_title_hint">请填写发票抬头</string>
    <string name="input_validate_code_prompt">请输入的手机验证码</string>
    <string name="input_validate_code_hint">请输入的手机验证码</string>
    <string name="get_validate_code">获取验证码</string>
</resources>