<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:paddingLeft="@dimen/layout_padding"
	android:paddingRight="@dimen/layout_padding"
	android:paddingBottom="@dimen/layout_padding"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:id="@+id/validate_code_panel"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15.0dip" >
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/label_margin"
			android:layout_marginRight="@dimen/label_margin"
			android:text="@string/input_validate_code_prompt"
			style="@style/TextAppearance.Notice.Gray" />
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<EditText
				android:id="@+id/ev_validate_code"
				android:layout_width="0.0dip"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/layout_margin_top"
				android:hint="@string/input_validate_code_hint"
				android:layout_marginRight="@dimen/button_padding"
				android:layout_weight="1.0"
				android:singleLine="true"
				android:maxLength="16"
				android:inputType="text"
				android:imeOptions="actionNext"
				style="@style/Widget.EditText" />
			<Button
				android:id="@+id/btn_validate_code"
				android:layout_marginTop="@dimen/button_margin_top"				android:layout_width="0.0dip"
				android:text="@string/get_validate_code"
				android:layout_weight="1.0"
				style="@style/Widget.Button.Main" />
		</LinearLayout>
	</LinearLayout>
    <ScrollView
	    android:scrollbarStyle="insideOverlay"
	    android:id="@+id/input_top_panel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:layout_below="@id/validate_code_panel"
	    android:layout_marginTop="15.0dip">
        <LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
            <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/label_margin"
				android:layout_marginRight="@dimen/label_margin"
				android:text="@string/input_password_prompt"
				style="@style/TextAppearance.Notice.Gray" />
            <EditText
				android:id="@+id/ev_password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/layout_margin_top"
				android:hint="@string/input_password_hint"
				android:singleLine="true"
				android:maxLength="16"
				android:inputType="textPassword"
				android:imeOptions="actionNext"
				style="@style/Widget.EditText" />
            <EditText
				android:id="@+id/ev_password_confirm"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/layout_margin_top"
				android:hint="@string/password_confirm_hint"
				android:singleLine="true"
				android:maxLength="16"
				android:inputType="textPassword"
				android:imeOptions="actionNext"
				style="@style/Widget.EditText" />
            <TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/label_margin"
				android:layout_marginTop="@dimen/layout_margin_top"
				android:layout_marginRight="@dimen/label_margin"
				android:text="@string/password_req_notice"
				style="@style/TextAppearance.Notice.Gray.Small" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
	    android:id="@+id/bottom_panel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15.0dip"
	    android:layout_below="@id/input_top_panel">
        <Button
	        android:id="@+id/btn_previous"
	        android:layout_width="0.0dip"
	        android:layout_marginRight="@dimen/button_padding"
	        android:text="@string/prev"
	        android:layout_weight="1.0"
	        style="@style/Widget.Button" />
        <Button
	        android:id="@+id/btn_next"
	        android:layout_width="0.0dip"
	        android:text="@string/next"
	        android:layout_weight="1.0"
	        style="@style/Widget.Button.Main" />
    </LinearLayout>
</RelativeLayout>